# ComfyUI-promptHistory

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
src/: promptHistory.py
src/prompt_history/: nodes.py
tests/: __init__.py  test_prompt_history.py
web/js/: PromptHistory.js  example.js
